--- a/mobile.css
+++ b/mobile.css
@@ -76,13 +76,13 @@
   left: 28%;
 }
 
-/* .runtime:focus {
+.runtime:focus {
   float: top;
-} */
+}
 
 .runtime > div {
   position: absolute;
-  top: 120%;
+  top: 80%;
   left: -14%;
 }
 
