--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ h1 {
   left: -1.2%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   max-width: 300px;
   margin-top: 3%;
