--- a/mobile.css
+++ b/mobile.css
@@ -29,7 +29,7 @@
 .inputs {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   max-width: 300px;
   margin-top: 3%;
