--- a/mobile.css
+++ b/mobile.css
@@ -99,6 +99,20 @@
 
 /* } */
 
+
+/* Footer */
+
+  #main-footer {
+    height: 7rem;
+  }
+    .footer-content {
+      flex-direction: column;
+      padding: 1rem;
+      height: 5rem;
+    }
+  
+
+
 #backBtn {
   position: absolute;
   top: 95%;
