--- a/main.css
+++ b/main.css
@@ -6,13 +6,14 @@
 
 
 main {
+  position: relative;
   width: 100%;
   height: 100vh;
   overflow: auto;
   background-image: linear-gradient(
     rgba(36, 184, 172, 0.644),
     rgba(218, 161, 75, 0.5)
-  );
+  )
   
 }
 
@@ -33,7 +34,7 @@ h1 {
 }
 
 .h5header {
-  position: center;
+
   margin: 0%;
   padding: 0%;
   border: black;
@@ -57,15 +58,12 @@ h1 {
 }
 
 .inputs {
-  position: relative;
-  left: -1.2%;
+  
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
   align-items: center;
   max-width: 300px;
-  margin-top: 3%;
-  margin-left: 44%;
   flex: 1 1 80%;
   appearance: none;
   background: none;
@@ -74,68 +72,41 @@ h1 {
   padding: 15px;
   border: none;
   outline: none;
-  transition: 0.4s;
+  transition: 0.5s ease-in ;
+  
 }
 
 .input:focus {
   box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.2);
 }
-
-#velOrFlow {
+#stepOne {
   color: #034255;
-  position: relative;
-  text-align: center;
-  top: 40px;
-  margin: 40px 10px;
+  position: absolute;
+  top: 12%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+#stepTwo {
+  color: #034255;
+  position: absolute;
+  top: 49%;
+  left: 50%;
+  transform: translate(-50%, -50%)
 
 }
 
 
-.velocity > div {
-  position: relative;
-  top: 30px;
-  left: 41.7%;
-  
-}
 
-.runtime {
-  
-  position: relative;
-  padding: 20px;
-  top:56%;
-  
-  left: 41.4%;
-  
-}
 
-.panel-group > div {
-  position: relative;
+/* .panel-group > div {
+
   top: 170px;
   left: 25%;
-}
+} */
 
-.div2 {
-  position: absolute;
-  top: 300%;
-  left: 100%;
-}
-
-
-.test {
-  background-color: #016685;
-  color: rgb(228, 188, 80);
-  padding: 10px;
-  font-size: 20px;
-  border: black;
-  border-radius: 15px;
-  display: inline-block;
-  margin-top: 20%;
-  margin-left: 45%;
-  margin-bottom: 1%;
-}
-
-select.combo2 option:hover {
-  background-color: rgb(170, 70, 78);
+#div2 {
+  position: absolute center;
+   
 }
 
 .fa-solid {
@@ -157,7 +128,7 @@ select.combo2 option:hover {
 }
 
 .dropdown {
-  position: absolute;
+
   display: inline-block;
   top: 60px;
   left: 48%;
@@ -165,7 +136,6 @@ select.combo2 option:hover {
 
 .dropdown-content {
   display: none;
-  position: relative;
   background-color: #28a2e9;
   max-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(38, 27, 134, 0.2);
@@ -180,7 +150,7 @@ select.combo2 option:hover {
   text-align: center;
   border-bottom: thick double #32a1ce;
 }
-
+/* Properties of flow rate figure */
 .flow1 {
   display: none;
   width: 1px;
@@ -190,6 +160,8 @@ select.combo2 option:hover {
   left: -190px;
   z-index: -1;
 }
+
+/*Properties of run time figure  */
 
 .run2 {
   display: none;
@@ -202,12 +174,13 @@ select.combo2 option:hover {
 }
 
 #backBtn {
-  position: relative;
-  top: 370px;
-  left: 16%;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%)
 }
 
-
+/* First Combo Properties */
 .dropdown-content a:hover {
   background-color: rgb(110, 40, 75);
   color: aliceblue;
@@ -223,20 +196,48 @@ a:hover + div {
   display: block;
 }
 
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
-
-#velocity:focus #velOrFlow {
-  display: none;
-}
 
 #main-footer {
 background: #333;
   color: #fff;
   height: 5rem; }
 
+  /* Pipeline Diameter combo */
 
+#firstCombo{
+  
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+ 
+}
+
+/* Velocity Input */
+#velTest{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+  
+}
+
+/* Run Time Input */
+#runTime {
+  
+  position: absolute;
+  top: 57%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+  
+}
+
+/* Flowrate Input */
+#flowTest{
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
 
   #main-footer .footer-content {
     display: flex;
