--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 main {
   position: relative;
-  width: 100%;
+  width: 100vh;
   height: 100vh;
   overflow: auto;
   background-image: linear-gradient(
