--- a/mobile.css
+++ b/mobile.css
@@ -1,17 +1,104 @@
-/* header{
-    font-size: 1px;
-    height: 1px;
-} */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
 
+main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-image: linear-gradient(
+    rgba(36, 184, 172, 0.644),
+    rgba(218, 161, 75, 0.5)
+  );
+}
+
+h1 {
+  color: #034255;
+  font-size: 25px !important ;
+  margin-top: 1px !important;
+  padding: 0px;
+  /* line-height: 1%; */
+  /* height: 1px; */
+}
 .dropbtn1 {
-  position: fixed;
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: solid;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  top: 10%;
   left: 40%;
 }
+
 .dropdown-content {
+  display: none;
+  background-color: #28a2e9;
+  max-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(38, 27, 134, 0.2);
+  flex-grow: 0;
+  /* z-index: -1; */
+}
+
+.dropdown-content a {
+  color: rgb(0, 0, 0);
+  padding: 10px 1px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  border-bottom: thick double #32a1ce;
+}
+
+/* First Combo Properties */
+.dropdown-content a:hover {
+  background-color: rgb(110, 40, 75);
+  color: aliceblue;
+}
+
+/* a:hover + div {
+  display: block;
+  position: relative;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+} */
+
+.flow1 {
+  display: none;
+  width: 1px;
+  height: 1px;
+  margin: 1px solid;
+  top: 30px;
+  left: -190px;
+  z-index: -1;
+}
+
+/*Properties of run time figure  */
+
+.run2 {
+  display: none;
+  width: 1px;
+  height: 1px;
+  margin: 1px solid;
+  top: -10px;
+  left: -180px;
+  z-index: -1;
+}
+
+/* .dropdown-content {
   position: relative;
   top: 60px;
   left: -22px;
-}
+} */
 
 /* .firstcombo{
       
@@ -32,8 +119,9 @@
   justify-content: left;
   align-items: center;
   max-width: 300px;
-  margin-top: 3%;
-  margin-left: 15%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
   flex: 1 1 80%;
   appearance: none;
   background: none;
@@ -45,25 +133,25 @@
   transition: 0.4s;
 }
 
-.motul > div {
+/* .motul > div {
   position: sticky;
   left: -30px;
-}
+} */
 
-#velOrFlow {
+/* #velOrFlow {
   position: absolute;
-  top: 58%;
+  top:58%;
   left: 105px;
   margin: 2px;
   padding: 2px;
   z-index: -1;
-}
+} */
 
-.velocity > div {
+/* .velocity > div {
   position: absolute;
   top: 63%;
   left: 28%;
-}
+} */
 
 /* Vel inputs gets mess up on Cellphone screen */
 /* .velocity:focus .panel-group {
@@ -71,23 +159,23 @@
   z-index:-3;
 } */
 
-.panel-group > div {
+/* .panel-group > div {
   position: absolute;
   top: 78%;
   left: 28%;
   z-index: 2;
-}
+} */
 
-.runtime > div {
+/* .runtime > div {
   position: absolute;
-
   top: 40%;
   left: -14%;
-}
+} */
 
-#flow:focus {
+/* #flow:focus {
   float: top;
-}
+} */
+*/
 
 /* .runtime>div{
   position: absolute; */
@@ -100,21 +188,72 @@
 /* } */
 
 
-/* Footer */
 
-  #main-footer {
-    height: 7rem;
-  }
-    .footer-content {
-      flex-direction: column;
-      padding: 1rem;
-      height: 5rem;
-    }
-  
 
+
+
+
+#firstCombo {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#velTest {
+  position: absolute;
+  top: 64%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#runTime {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#flowTest {
+  position: absolute;
+  top: 87%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 #backBtn {
   position: absolute;
-  top: 95%;
-  left: 30px;
+  top: 89%;
+  left: 13%;
+}
+
+#stepOne {
+  color: #034255;
+  position: absolute;
+  text-align: center;
+  max-width: 60px;
+  /* white-space: nowrap; */
+  top: 20%;
+  left: 13%;
+  transform: translate(-50%, -50%);
+}
+
+#stepTwo {
+  color: #034255;
+  position: absolute;
+  text-align: center;
+  /* white-space: nowrap; */
+  max-width: 60px;
+  /* text-size-adjust: none; */
+  top: 64%;
+  left: 13%;
+  transform: translate(-50%, -50%);
+}
+/* Footer */
+
+#main-footer {
+  height: 7rem;
+}
+.footer-content {
+  flex-direction: column;
+  padding: 1rem;
+  height: 5rem;
 }
